# ORCs-SBT

./: .gitignore  CMakeLists.txt  LICENSE  ORCsSBT.pro  README.md  Val_Scoreboard_Tool.pro  Val_Scoreboard_Tool_en.ts  about.cpp  about.ui  buttons.cpp  buttons.h  castom_data.h  filecontrol.cpp  filecontrol.h  filewrite.cpp  filewrite.h  iuserinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_getset.cpp  mwindow.cpp  mwindow.h  resource.h  resurces.qrc  texteditor.cpp  texteditor.h  texteditor.ui  updateextdata.cpp  updateextdata.h
docs/: CMakeLists.txt  Doxyfile.in
src/: ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  DataTree.cpp  DataTree.h  DataTreeStorage.cpp  DataTreeStorage.h  DynamicWidgetList.cpp  DynamicWidgetList.h  IDataTreeStorage.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MatchInfoWidget.cpp  MatchInfoWidget.h  PlayerListWidget.cpp  PlayerListWidget.h  PlayerListWidget.ui  PlayerWidget.cpp  PlayerWidget.h  PlayerWidget.ui  SettingsWidget.h  Src.pri  TeamWidget.cpp  TeamWidget.h  TeamWidget.ui  datatree.h
src/Widgets/: MainWindow.h  MatchInfoWidget.h  MatchInfoWidget.ui  PlayerListWidget.cpp  PlayerListWidget.h  PlayerListWidget.ui  PlayerWidget.cpp  PlayerWidget.h  SettingsWidget.cpp  SettingsWidget.ui  TeamWidget.cpp  TeamWidget.h
